--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=lp2_examenFinal
+
+spring.datasource.url=jdbc:mysql://localhost:3306/bd_202221833
+spring.datasource.username=root
+spring.datasource.password=mysql
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
