--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,14 @@
 			<artifactId>jbcrypt</artifactId>
 			<version>0.4</version>
 		</dependency>
+		
+		<!--QUITARLO LUEGO-->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-devtools</artifactId>
+        <optional>true</optional>
+    </dependency>
+
 	</dependencies>
 
 	<build>
